--- a/healthcare/templates/addPatients.html
+++ b/healthcare/templates/addPatients.html
@@ -12,37 +12,35 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Add New Patient</h3></div>
                                     <div class="card-body">
-                                        <form method="POST" action="{% url 'login' %}">
+                                        <form method="POST" action="{% url 'addPatients' %}">
                                             {% csrf_token %} 
-                                            <div class="form-floating mb-3">
-                                                <div class="row">
-                                                  <div class="col-3">
-                                                    <label for="fname">First Name</label>
-                                                  </div>
-                                                  <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="firstname" placeholder="Your name..">
-                                                  </div>
-                                                </div>
-                                            </div>
-                                            
-                                            <div class="form-floating mb-3">
-
-                                              <div class="row">
-                                                  <div class="col-3">
-                                                    <label for="lname">Last Name</label>
-                                                  </div>
-                                                  <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="lastname" placeholder="Your last name..">
+                                              <div class="form-floating mb-3">
+                                                  <div class="row">
+                                                    <div class="col-3">
+                                                      <label for="fname">First Name</label>
+                                                    </div>
+                                                    <div class="col-9">
+                                                      <input class="form-control" style="width: 100%;" id="firstname" type="text" name="firstname" placeholder="Your first name.."/>
+                                                    </div>
                                                   </div>
                                               </div>
-                                            </div>
-                                            <div class="form-floating mb-3">
+                                              <div class="form-floating mb-3">
+                                                <div class="row">
+                                                    <div class="col-3">
+                                                      <label for="lname">Last Name</label>
+                                                    </div>
+                                                    <div class="col-9">
+                                                      <input class="form-control" style="width: 100%;" id="lastname" type="text" name="lastname" placeholder="Your last name.."/>
+                                                    </div>
+                                                </div>
+                                              </div>
+                                              <div class="form-floating mb-3">
                                                 <div class="row">
                                                   <div class="col-3">
                                                     <label for="dob">Date Of Birth</label>
                                                   </div>
                                                   <div class="col-9">
-                                                   <input style="width: 30%;" type="date" name="Data of Birth">
+                                                   <input class="form-control" style="width: 30%;" id="dob" type="date" name="dob"/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -52,7 +50,7 @@
                                                     <label for="gender">Gender</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="Gender" placeholder="M/F..">
+                                                    <input class="form-control" style="width: 100%;" id="gender" type="text" name = "gender" placeholder="Male/Female.." />
                                                   </div>
                                                 </div>
                                               </div>
@@ -62,7 +60,7 @@
                                                     <label for="weight">Weight</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="Weight" placeholder="weight..">
+                                                    <input class="form-control" style="width: 100%;" id="weight" type="text" name="weight" placeholder="Your weight.." />
                                                   </div> 
                                                 </div>
                                               </div>
@@ -72,17 +70,17 @@
                                                     <label for="height">Height</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="Height" placeholder="Height..">
+                                                    <input class="form-control" style="width: 100%;" id="height" type="text" name="height" placeholder="Your height..">
                                                   </div>
                                                 </div> 
                                               </div>
                                               <div class="form-floating mb-3">
                                                 <div class="row">
                                                   <div class="col-3">
-                                                    <label for="Health Histroy">Health Histroy</label>
+                                                    <label  for="Health Histroy">Health Histroy</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input style="width: 100%;" type="text" name="Health Histroy" placeholder="Health Histroy..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="helhis" placeholder="Health Histroy..">
                                                   </div>
                                                 </div>  
                                               </div>
