--- a/healthcare/templates/home.html
+++ b/healthcare/templates/home.html
@@ -49,6 +49,9 @@
                                         {% endfor %}
                                     </tbody>
                                 </table>
+                                <form method="FETCH" action="{% url 'home' %}">
+                                    <button>Download</button>
+                                </form>
                             </div>
                         </div>
                     </div>
