--- a/healthcare/templates/base.html
+++ b/healthcare/templates/base.html
@@ -21,6 +21,7 @@
             {% if user.is_authenticated %}
             <!-- check for access to add neww patients role H -->
             <a class="navbar-brand ps-1 small" href="{% url 'addPatients' %}"> Add new Patients </a>
+            <a class="navbar-brand ps-1 small" href="{% url 'addUser' %}"> Add new User </a>
 
             {% endif %}
             <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
