--- a/healthcare/templates/home.html
+++ b/healthcare/templates/home.html
@@ -17,6 +17,7 @@
                                         <tr>
                                             <th>First Name</th>
                                             <th>Last Name</th>
+                                            <th>Date of Birth</th>
                                             <th>Age</th>
                                             <th>Gender</th>
                                             <th>Weight</th>
@@ -28,6 +29,7 @@
                                         <tr>
                                             <th>First Name</th>
                                             <th>Last Name</th>
+                                            <th>Date of Birth</th>
                                             <th>Age</th>
                                             <th>Gender</th>
                                             <th>Weight</th>
@@ -40,6 +42,7 @@
                                         <tr>
                                             <td>{{ patient.firstName }}</td>
                                             <td>{{ patient.lastName }}</td>
+                                            <td>{{ patient.dob }}</td>
                                             <td>{{ patient.age }}</td>
                                             <td>{{ patient.gender }}</td>
                                             <td>{{ patient.weight }}</td>
