--- a/healthcare/templates/home.html
+++ b/healthcare/templates/home.html
@@ -11,37 +11,53 @@
                                 <i class="fas fa-table me-1"></i>
                                 DataTable Example
                             </div>
+                            <form method='POST' action="{% url 'home' %}" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input class="form-control" type="text" name="startWeight" placeholder="Starting weight " aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                                    <input class="form-control" type="text" name="endWeight" placeholder="Maximun weight range search" aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                                    <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+                                </div>
+                            </form>
                             <div class="card-body">
                                 <table id="datatablesSimple">
                                     <thead>
                                         <tr>
+                                            {% if isH %}
                                             <th>First Name</th>
                                             <th>Last Name</th>
+                                            {% endif %}
                                             <th>Date of Birth</th>
                                             <th>Age</th>
                                             <th>Gender</th>
-                                            <th>Weight</th>
-                                            <th>Height</th>
+                                            <th>Weight (lb)</th>
+                                            <th>Height (cm)</th>
                                             <th>Health History</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
+                                            {% if isH %}
+                                            <th>First Name</th>
+                                            <th>Last Name</th>
+                                            {% endif %}
                                             <th>First Name</th>
                                             <th>Last Name</th>
                                             <th>Date of Birth</th>
                                             <th>Age</th>
                                             <th>Gender</th>
-                                            <th>Weight</th>
-                                            <th>Height</th>
+                                            <th>Weight (lb)</th>
+                                            <th>Height (cm)</th>
                                             <th>Health History</th>
                                         </tr>
                                     </tfoot>
                                     <tbody>
                                         {% for patient in patients %}
                                         <tr>
+                                            {% if isH %}
                                             <td>{{ patient.firstName }}</td>
                                             <td>{{ patient.lastName }}</td>
+                                            {% endif %}
                                             <td>{{ patient.dob }}</td>
                                             <td>{{ patient.age }}</td>
                                             <td>{{ patient.gender }}</td>
