--- a/healthcare/templates/addAppointment.html
+++ b/healthcare/templates/addAppointment.html
@@ -61,7 +61,7 @@
                                                     <label for="dob">Date</label>
                                                   </div>
                                                   <div class="col-9">
-                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="date"/>
+                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="date" required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -71,7 +71,7 @@
                                                     <label for="gender">Time</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 50%;" id="gender" type="time" name = "time"/>
+                                                    <input class="form-control" style="width: 50%;" id="gender" type="time" name = "time" required/>
                                                   </div>
                                                 </div>
                                               </div>
