--- a/healthcare/templates/addDoctor_pk.html
+++ b/healthcare/templates/addDoctor_pk.html
@@ -38,7 +38,7 @@
                                                       <label for="fname">First name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="name" type="text" name="fName" placeholder="first name"/>
+                                                      <input class="form-control" style="width: 100%;" id="name" type="text" name="fName" placeholder="first name" required/>
                                                     </div>
                                                   </div>
                                               </div>
@@ -48,7 +48,7 @@
                                                     <label for="lname">Last name</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name="lName" placeholder="last name"/>
+                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name="lName" placeholder="last name" required/>
                                                   </div>
                                                 </div>
                                             </div>
@@ -58,7 +58,7 @@
                                                     <label for="spec">Speciality</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name = "spec" placeholder="Speciality" />
+                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name = "spec" placeholder="Speciality" required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -68,7 +68,7 @@
                                                     <label for="phone">Phone number</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="weight" type="text" name="phone" placeholder="Phone no." />
+                                                    <input class="form-control" style="width: 100%;" id="weight" type="text" name="phone" placeholder="Phone no." required/>
                                                   </div> 
                                                 </div>
                                               </div>
