--- a/healthcare/templates/guestAddPatient.html
+++ b/healthcare/templates/guestAddPatient.html
@@ -31,7 +31,7 @@
                                                       <label for="fname">First Name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="firstname" type="text" name="fName" placeholder="Your first name.."/>
+                                                      <input class="form-control" style="width: 100%;" id="firstname" type="text" name="fName" placeholder="Your first name.." required/>
                                                     </div>
                                                   </div>
                                               </div>
@@ -41,7 +41,7 @@
                                                       <label for="lname">Last Name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="lastname" type="text" name="lName" placeholder="Your last name.."/>
+                                                      <input class="form-control" style="width: 100%;" id="lastname" type="text" name="lName" placeholder="Your last name.." required/>
                                                     </div>
                                                 </div>
                                               </div>
@@ -51,7 +51,7 @@
                                                     <label for="dob">Date Of Birth</label>
                                                   </div>
                                                   <div class="col-9">
-                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="dob"/>
+                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="dob" required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -61,7 +61,7 @@
                                                     <label for="gender">Gender</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="gender" type="text" name = "gender" placeholder="Male/Female.." />
+                                                    <input class="form-control" style="width: 100%;" id="gender" type="text" name = "gender" placeholder="Male/Female.." required />
                                                   </div>
                                                 </div>
                                               </div>
@@ -71,7 +71,7 @@
                                                     <label for="weight">Weight</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="weight" type="number" name="weight" placeholder="Your weight.." />
+                                                    <input class="form-control" style="width: 100%;" id="weight" type="number" name="weight" placeholder="Your weight.." required />
                                                   </div> 
                                                 </div>
                                               </div>
@@ -81,7 +81,7 @@
                                                     <label for="height">Height</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="height" type="text" name="height" placeholder="Your height..">
+                                                    <input class="form-control" style="width: 100%;" id="height" type="text" name="height" placeholder="Your height.." required>
                                                   </div>
                                                 </div> 
                                               </div>
@@ -91,7 +91,7 @@
                                                     <label  for="Health Histroy">Health Histroy</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="helhis" placeholder="Health Histroy..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="helhis" placeholder="Health Histroy.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -101,7 +101,7 @@
                                                     <label  for="Address">Address</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="address" placeholder="Address..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="address" placeholder="Address.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -111,7 +111,7 @@
                                                     <label  for="Contact">Contact no.</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="contact" placeholder="Phone no..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="contact" placeholder="Phone no.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -121,7 +121,7 @@
                                                     <label  for="Medication">Medications</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="medication" placeholder="Medications..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="medication" placeholder="Medications.." required>
                                                   </div>
                                                 </div>  
                                               </div>
