--- a/healthcare/templates/addDoctor.html
+++ b/healthcare/templates/addDoctor.html
@@ -38,7 +38,7 @@
                                                       <label for="fname">First name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="name" type="text" name="fName" placeholder="first name"/>
+                                                      <input class="form-control" style="width: 100%;" id="name" type="text" name="fName" placeholder="first name" required/>
                                                     </div>
                                                   </div>
                                               </div>
@@ -48,7 +48,7 @@
                                                     <label for="lname">Last name</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name="lName" placeholder="last name"/>
+                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name="lName" placeholder="last name" required/>
                                                   </div>
                                                 </div>
                                             </div>
@@ -58,7 +58,7 @@
                                                     <label for="spec">Speciality</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name = "spec" placeholder="Speciality" />
+                                                    <input class="form-control" style="width: 100%;" id="name" type="text" name = "spec" placeholder="Speciality" required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -68,11 +68,11 @@
                                                     <label for="phone">Phone number</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="weight" type="text" name="phone" placeholder="Phone no." />
+                                                    <input class="form-control" style="width: 100%;" id="weight" type="text" name="phone" placeholder="Phone no." required/>
                                                   </div> 
                                                 </div>
                                               </div>
-                                              {% if messages %}
+                                              <!-- {% if messages %}
                                                   <div class="form-floating mb-3">
                                                     <div class="row">
                                                       <div class="col-3">
@@ -90,7 +90,7 @@
                                                       </div>
                                                     </div>  
                                                   </div>
-                                              {% else %}  
+                                              {% else %}
                                               <div class="form-floating mb-3">
                                                 <div class="row">
                                                   <div class="col-3">
@@ -101,7 +101,7 @@
                                                   </div>
                                                 </div>
                                             </div>
-                                            {% endif %}
+                                            {% endif %}   -->
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <button class="btn btn-secondary" type="submit" >Add</button>
                                             </div>
