--- a/healthcare/templates/addPatient.html
+++ b/healthcare/templates/addPatient.html
@@ -38,7 +38,7 @@
                                                       <label for="fname">First Name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="firstname" type="text" name="fName" placeholder="Your first name.."/>
+                                                      <input class="form-control" style="width: 100%;" id="firstname" type="text" name="fName" placeholder="Your first name.." required/>
                                                     </div>
                                                   </div>
                                               </div>
@@ -48,7 +48,7 @@
                                                       <label for="lname">Last Name</label>
                                                     </div>
                                                     <div class="col-9">
-                                                      <input class="form-control" style="width: 100%;" id="lastname" type="text" name="lName" placeholder="Your last name.."/>
+                                                      <input class="form-control" style="width: 100%;" id="lastname" type="text" name="lName" placeholder="Your last name.." required/>
                                                     </div>
                                                 </div>
                                               </div>
@@ -58,7 +58,7 @@
                                                     <label for="dob">Date Of Birth</label>
                                                   </div>
                                                   <div class="col-9">
-                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="dob"/>
+                                                   <input class="form-control" style="width: 50%;" id="dob" type="date" name="dob" required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -68,7 +68,7 @@
                                                     <label for="gender">Gender</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="gender" type="text" name = "gender" placeholder="Male/Female.." />
+                                                    <input class="form-control" style="width: 100%;" id="gender" type="text" name = "gender" placeholder="Male/Female.."  required/>
                                                   </div>
                                                 </div>
                                               </div>
@@ -78,7 +78,7 @@
                                                     <label for="weight">Weight</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="weight" type="number" name="weight" placeholder="Your weight.." />
+                                                    <input class="form-control" style="width: 100%;" id="weight" type="number" name="weight" placeholder="Your weight.." required />
                                                   </div> 
                                                 </div>
                                               </div>
@@ -88,7 +88,7 @@
                                                     <label for="height">Height</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="height" type="text" name="height" placeholder="Your height..">
+                                                    <input class="form-control" style="width: 100%;" id="height" type="text" name="height" placeholder="Your height.." required>
                                                   </div>
                                                 </div> 
                                               </div>
@@ -98,7 +98,7 @@
                                                     <label  for="Health Histroy">Health Histroy</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="helhis" placeholder="Health Histroy..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="helhis" placeholder="Health Histroy.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -108,7 +108,7 @@
                                                     <label  for="Address">Address</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="address" placeholder="Address..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="address" placeholder="Address.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -118,7 +118,7 @@
                                                     <label  for="Contact">Contact no.</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="contact" placeholder="Phone no..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="contact" placeholder="Phone no.." required>
                                                   </div>
                                                 </div>  
                                               </div>
@@ -128,7 +128,7 @@
                                                     <label  for="Medication">Medications</label>
                                                   </div>
                                                   <div class="col-9">
-                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="medication" placeholder="Medications..">
+                                                    <input class="form-control" style="width: 100%;" id="helhis" type="text" name="medication" placeholder="Medications.." required>
                                                   </div>
                                                 </div>  
                                               <!-- </div>
@@ -142,7 +142,7 @@
                                                   </div>
                                                 </div>  
                                               </div> -->
-                                              {% if id %}
+                                              <!-- {% if id %}
                                                   <div class="form-floating mb-3">
                                                     <div class="row">
                                                       <div class="col-3">
@@ -167,7 +167,7 @@
                                                   </div>
                                                 </div>  
                                               </div>
-                                              {% endif %}
+                                              {% endif %} -->
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <button class="btn btn-secondary" type="submit" >Add</button>
                                             </div>
