--- a/healthcare/templates/base.html
+++ b/healthcare/templates/base.html
@@ -14,6 +14,17 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     </head>
+
+    <style>
+        body {
+            /* background-image: url("static/assets/img/medicine-blue-background-flat-lay.jpg"); */
+            background-color: #f0dfdf;
+            display: block;
+            width: 100vw;
+            height: 100vh;
+            }
+    </style>
+
     <body class="sb-nav-fixed">
 
 
