--- a/healthcare/templates/addPatient_pk.html
+++ b/healthcare/templates/addPatient_pk.html
@@ -30,7 +30,7 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Add New Patient</h3></div>
                                     <div class="card-body">
-                                        <form method="POST" action="{% url 'addPatient' %}">
+                                        <form method="POST" action="{% url 'addPatient_pk' id %}">
                                             {% csrf_token %} 
                                               <div class="form-floating mb-3">
                                                   <div class="row">
